tests/expectations/compiler/finalize/private_input_ouput_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [EPAR0370009]: unexpected string: expected 'expression', found 'async'
    --> compiler-test:5:9
     |
   5 |         async finalize_foo(a);
     |         ^^^^^"""]
